--- a/sources/styles.css
+++ b/sources/styles.css
@@ -2,51 +2,51 @@
 
 /* 设置页面整体样式 */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #000000be;
-    margin: 0;
-    padding: 0;
-    color: white;
-  }
-  
-  /* 设置页头样式 */
-  header {
-    background-color: #333;
-    color: white;
-    padding: 10px;
-    text-align: center;
-  }
+  font-family: Arial, sans-serif;
+  background-color: #000000be;
+  margin: 0;
+  padding: 0;
+  color: white;
+}
 
-  header a {
-    color: yellow;
-    text-decoration: none;
-  }
-  
-  /* 设置主要内容样式 */
-  main {
-    max-width: 800px;
-    margin: 20px auto;
-    padding: 20px;
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  }
-  
-  /* 设置页脚样式 */
-  footer {
-    text-align: center;
-    padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #333;
-    color: white;
-  }
+/* 设置页头样式 */
+header {
+  background-color: #333;
+  color: white;
+  padding: 10px;
+  text-align: center;
+}
 
-  footer a {
-    color: yellow;
-    text-decoration: none;
-  }
+header a {
+  color: rgb(255, 0, 0);
+  text-decoration: none;
+}
+
+/* 设置主要内容样式 */
+main {
+  max-width: 800px;
+  margin: 20px auto;
+  padding: 20px;
+  background-color: #000000;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+/* 设置页脚样式 */
+footer {
+  text-align: center;
+  padding: 10px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background-color: #333;
+  color: white;
+}
+
+footer a {
+  color: rgb(255, 0, 0);
+  text-decoration: none;
+}
 
 a {
-    color: #ffff00b9; /* 设置链接高亮字体颜色为黄色 */
+  color: #ff0000; /* 设置链接高亮字体颜色为黄色 */
 }
